fix header spacing issue

--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -22,6 +22,10 @@ div[data-role="page"].feedU-page
         font-family: variables.$font-family
         text-shadow: none
 
+    .ui-title
+        margin-left: 0px
+        margin-right: 0px
+
     .ui-header
         background-color: map.get(variables.$feedU-theme, "primary-color")
         display: flex
